# DataDiscrepancy

./: .gitignore  README.md  __init__.py  data_quality_user_guide.md  mock_data_discrepancies.csv  pyproject.toml  walkthrough.md
resources/: dataset_2_small_nevada.csv  test_set.xlsx  test_set_small.numbers  test_set_small.xlsx
src/: app.py  profiler.py
src/agents/: __init__.py  base.py  duplicate.py  format_inconsistency.py  inconsistent_casing.py  missing_value.py  out_of_range.py  statistical_outliers.py  whitespace.py  wrong_type.py
src/streamlit/: __init__.py  kpi.py  tab_casing.py  tab_more.py  tab_profiler.py  tab_review.py  tab_row_inspector.py  tab_summary.py
