[project]
name = "datadiscrepancy"
version = "0.1.0"
description = ""
authors = [
    {name = "ATISHAY JAIN",email = "atishayj.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9, !=3.9.7"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.2",
    "scikit-learn>=1.3.0",
    "rapidfuzz>=3.5.2"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
